# student-packet-builder

./: .gitignore  README.md  pyproject.toml
student_packet_builder/: __init__.py  packet_builder.py  resumes.py  validators.py
tests/: test_student_packet_builder.py
